[tool.poetry]
name = "leetcode_python"
version = "1.0.0"
description = "CNife's LeetCode solutions with Python 3."
authors = ["CNife <CNife@vip.qq.com>"]

[tool.poetry.dependencies]
python = "~3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
